--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -34,6 +34,8 @@ jobs:
           bit config set user.token $BIT_TOKEN
       - name: Install packages using bit
         run: bit install
+      - name: pull remote scope
+        run: bit import
       - name: Hard-tag pending components
         run: bit tag --persist
       - name: Export components
