--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -1,20 +1,18 @@
 # This workflow hard-tags and exports soft-tagged components
-name: Tag and Export Components
+name: Export Components
 
 on:
-  pull_request:
-    types:
-      - closed
+  push:
+    branches: [main]
 
 jobs:
   tag-and-export:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '--skip-ci')"
     env:
       BIT_TOKEN: ${{ secrets.BIT_TOKEN }}
 
     steps:
-      - run: echo The PR was merged
       - uses: actions/checkout@v2
       - name: Use Node.js 12
         uses: actions/setup-node@v1
@@ -33,16 +31,33 @@ jobs:
           bit config set user.token $BIT_TOKEN
       - name: Install packages using bit
         run: bit install
-      - name: pull remote scope
-        run: bit import
+      - name: Soft Tag if not
+        run: |
+          sudo apt-get install -y jq
+          sh ./.github/soft-tag.sh 
       - name: Hard-tag pending components
         run: bit tag --persist
       - name: Export components
         run: bit export
       - name: Commit changes made to .bitmap
-        run: |
-          git config --global user.name '${{ github.actor }}'
-          git config --global user.email '${{ github.actor }}@users.noreply.github.com'
-          git add .bitmap
-          git commit -m "update .bitmap with new component versions (automated). --skip-ci"
-          git push
+        run: sh ./.github/commit-bitmap.sh
+      - name: Post to a Slack channel
+        id: slack
+        uses: slackapi/slack-github-action@v1.23.0
+        with:
+          channel-id: 'C04J76273MZ'
+          payload: |
+            {
+              "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}   
