--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -52,10 +52,10 @@ jobs:
               "type": "home",
               "blocks": [
                 {
-                  "type": "header",
+                  "type": "text",
                   "text": {
                     "type": "plain_text",
-                    "text": "GitHub Action build result"
+                    "text": "GitHub Action build"
                   }
                 },
                 {
@@ -65,9 +65,18 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "\n> Status: *bold*${{ job.status }}*bold*❌\n>${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                    "text": "\n>Status\n>❌ *${{ job.status }}*"
                   }
-                }
+                },
+                {
+                "type": "context",
+                "elements": [
+                  {
+                    "type": "mrkdwn",
+                    "text": "${{ github.event.pull_request.html_url}}/n`${{github.event.head_commit.url}}`"
+                  }
+                ]
+              },
               ]
             }
         env:
