--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           channel-id: 'C04J76273MZ'
           payload: |
-            {
+            { "text": "Github Action build \n>Status\n>❌ *${{ job.status }}*\n ${{ github.event.pull_request.html_url}}"
               "type": "home",
               "blocks": [
                 {
