--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -77,7 +77,7 @@ jobs:
                     "type": "section",
                     "text": {
                       "type": "mrkdwn",
-                      "text": "*Commit SHA*\n`${{github.event.head_commit.url}}\n 2:${{github.event.pull_request_head.sha}}\n 3:${{ github.sha }}`"
+                      "text": "*Commit SHA*\n`${{ github.sha }}`"
                     }
                   }
               ]
