--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -52,7 +52,16 @@ jobs:
               "text": "Github Action build \n>Status\n>❌ *${{ job.status }}*\n ${{ github.event.pull_request.html_url}}",
               "type": "home",
               "blocks": 
-              [
+                [ {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "GitHub Workflow Action: *Export Components*"
+                    }
+                  },
+                  {
+                    "type": "divider"
+                  },
                   {
                     "type": "section",
                     "fields": [
