--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -46,7 +46,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.23.0
         if: failure()
         with:
-          channel-id: 'C04J76273MZ'
+          channel-id: 'C04J76273MZ,C04EZ4BTQ6N'
           payload: |
             { 
               "text": "Github Action build \n>Status\n>❌ *${{ job.status }}*\n ${{ github.event.pull_request.html_url}}",
