--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -71,7 +71,7 @@ jobs:
                       },
                       {
                         "type": "mrkdwn",
-                        "text": "*Author*\n${{ github.event.pull_request.user.login }}\n *Compare branch*\n${{ github.event.pull_request.head.ref }}"
+                        "text": "${{github.event.pull_request.user.login? *Author*\n github.event.pull_request.user.login : ''}}\n *Compare branch*\n${{ github.event.pull_request.head.ref }}"
                       }
                     ]
                   },
@@ -79,7 +79,7 @@ jobs:
                     "type": "section",
                     "text": {
                       "type": "mrkdwn",
-                      "text": "*Pull request*\n${{ github.event.pull_request.html_url }}"
+                      "text": "${{ github.event.pull_request.html_url ? '' : *Pull request*\n github.event.pull_request.html_url }}"
                     }
                   },
                   {
