--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -67,11 +67,11 @@ jobs:
                     "fields": [
                       {
                         "type": "mrkdwn",
-                        "text": "\n*Status*\n❌ ${{ job.status }}\n *Pull request number*\n${{ github.event.pull_request.number }}"
+                        "text": "\n*Status*\n❌ ${{ job.status }}\n *Pull request number*\n${{ github.event.push.number }}"
                       },
                       {
                         "type": "mrkdwn",
-                        "text": "${{github.event.pull_request.user.login ? *Author*\n github.event.pull_request.user.login : ''}}\n *Compare branch*\n${{ github.event.pull_request.head.ref }}"
+                        "text": "*Author*\n${{ github.actor }}\n *Compare branch*\n${{ github.ref_name }}"
                       }
                     ]
                   },
@@ -79,7 +79,7 @@ jobs:
                     "type": "section",
                     "text": {
                       "type": "mrkdwn",
-                      "text": "${{ github.event.pull_request.html_url ? '' : *Pull request*\n github.event.pull_request.html_url }}"
+                      "text": "*Pull request*\n${{ github }}"
                     }
                   },
                   {
