--- a/.github/workflows/tag-and-export.yml
+++ b/.github/workflows/tag-and-export.yml
@@ -52,7 +52,13 @@ jobs:
                       }
                     ]
                   },
-                  
+                  {
+                    "type": "section",
+                    "text": {
+                      "type": "mrkdwn",
+                      "text": "*Pull request message*\n${{toJSON(github.event.head_commit.message)}}"
+                    }
+                  },
                   {
                     "type": "section",
                     "text": {
@@ -64,7 +70,7 @@ jobs:
                     "type": "section",
                     "text": {
                       "type": "mrkdwn",
-                      "text": "Compare changes\n${{github.event.compare}}"
+                      "text": "<${{github.event.compare}}|Compare changes>"
                     }
                   }
                 ]
